// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.edpaggregator.v1alpha;

option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "EncryptionKeyProto";

// Params used for [AesGcmHkdfStreamingKey]
message AesGcmHkdfStreamingParams {
  // ciphertext_segment_size
  int32 ciphertext_segment_size = 1;
  // size of AES-GCM keys derived for each segment
  int32 derived_key_size = 2;
  // hkdf_hash_type
  HashType hkdf_hash_type = 3;
}

// Wrapper of AesGcmHkdfStreamingKey
message AesGcmHkdfStreamingKey {
  // Version of AesGcmHkdfStreamingKey
  int32 version = 1;
  // Params of AesGcmHkdfStreamingKey
  AesGcmHkdfStreamingParams params = 2;
  // Placeholder for ctype and debug_redact.
  bytes key_value = 3;
}

// Wrapper of AesGcmKey
message AesGcmKey {
  // Version of AesGcmKey
  uint32 version = 1;
  // Placeholder for ctype and debug_redact.
  bytes key_value = 2;
}

// The Encryption Key object
message EncryptionKey {
  // The type of key
  oneof key {
    // AesGcmHkdfStreamingKey key type
    AesGcmHkdfStreamingKey aes_gcm_hkdf_streaming_key = 1;
    // AesGcmKey key type
    AesGcmKey aes_gcm_key = 2;
  }
}

// Hash type
enum HashType {
  // HASH_TYPE_UNSPECIFIED
  HASH_TYPE_UNSPECIFIED = 0;
  // Using SHA1 for digital signature is deprecated
  SHA1 = 1;
  // SHA384
  SHA384 = 2;
  // SHA256
  SHA256 = 3;
  // SHA512
  SHA512 = 4;
  // SHA224
  SHA224 = 5;
}
